--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -3,91 +3,62 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;500;700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 body {
+  position: relative;
   font-family: "Josefin Sans", "Roboto", "Noto Sans KR", sans-serif;
   font-size: 16px;
   color: #111;
-  background-image: repeating-linear-gradient(90deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05) 1px, 0, transparent 50px);
-  background-color: #333;
+  background-color: rgb(236, 234, 214);
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-li {
-  list-style: none;
+body::after {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 10%;
+  display: block;
+  position: absolute;
+  content: "";
+  background-position: 50%;
+  background-image: url("../../public/images/bg.png");
+  background-size: 40%;
 }
 
 #header {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100%;
-  height: 60px;
+  height: 80px;
   position: relative;
   z-index: 99;
   overflow: hidden;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  line-height: 1.3;
 }
-#header h1 {
+
+.title {
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
-  text-shadow: 1px 1px 0px #ccc,2px 2px 0px #ccc,3px 3px 0px #ccc,4px 4px 0px #ccc,5px 5px 0px #ccc,6px 6px 0px #ccc,7px 7px 0px #ccc,8px 8px 0px #ccc,9px 9px 0px #ccc,10px 10px 0px #ccc,11px 11px 0px #ccc,12px 12px 0px #ccc,13px 13px 0px #ccc,14px 14px 0px #ccc,15px 15px 0px #ccc,16px 16px 0px #ccc,17px 17px 0px #ccc,18px 18px 0px #ccc,19px 19px 0px #ccc,20px 20px 0px #ccc,21px 21px 0px #ccc,22px 22px 0px #ccc,23px 23px 0px #ccc,24px 24px 0px #ccc,25px 25px 0px #ccc,26px 26px 0px #ccc,27px 27px 0px #ccc,28px 28px 0px #ccc,29px 29px 0px #ccc,30px 30px 0px #ccc,31px 31px 0px #ccc,32px 32px 0px #ccc,33px 33px 0px #ccc,34px 34px 0px #ccc,35px 35px 0px #ccc,36px 36px 0px #ccc,37px 37px 0px #ccc,38px 38px 0px #ccc,39px 39px 0px #ccc,40px 40px 0px #ccc,41px 41px 0px #ccc,42px 42px 0px #ccc,43px 43px 0px #ccc,44px 44px 0px #ccc,45px 45px 0px #ccc,46px 46px 0px #ccc,47px 47px 0px #ccc,48px 48px 0px #ccc,49px 49px 0px #ccc,50px 50px 0px #ccc;
-}
-#header h1 strong {
-  font-weight: 700;
-}
-
-.checkBox {
+  position: relative;
   display: inline-block;
-  margin-right: 20px;
-  vertical-align: middle;
 }
-.checkBox input {
-  width: 0;
-  height: 0;
-  overflow: hidden;
+.title::before {
+  display: block;
   position: absolute;
-  padding: 0;
-  border: 0;
+  content: "";
+  display: block;
+  width: 110%;
+  height: 40%;
+  background-color: rgb(118, 173, 245);
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
-.checkBox input:checked ~ .label:before {
-  content: "\e5ca";
-  font-family: "Material Icons";
-  color: #fff;
-  border: none;
-  font-weight: bold;
-  background-color: #2c81f0;
-  text-shadow: 1px 1px 0px rgb(15, 103, 218),2px 2px 0px rgb(15, 103, 218),3px 3px 0px rgb(15, 103, 218),4px 4px 0px rgb(15, 103, 218),5px 5px 0px rgb(15, 103, 218),6px 6px 0px rgb(15, 103, 218),7px 7px 0px rgb(15, 103, 218),8px 8px 0px rgb(15, 103, 218),9px 9px 0px rgb(15, 103, 218),10px 10px 0px rgb(15, 103, 218);
-}
-.checkBox .label {
-  display: flex;
-  align-items: center;
-  user-select: none;
-}
-.checkBox .label:before {
-  content: "\e5ca";
-  width: 25px;
-  height: 25px;
-  overflow: hidden;
-  margin-right: 6px;
-  font-family: "Material Icons";
-  color: #acacac;
-  border: 1px solid #c5c5c5;
-  font-weight: bold;
-  border-radius: 5px;
-  box-sizing: border-box;
-  background-color: #f8f8f8;
-  text-shadow: 1px 1px 0px #dfdfdf,2px 2px 0px #dfdfdf,3px 3px 0px #dfdfdf,4px 4px 0px #dfdfdf,5px 5px 0px #dfdfdf,6px 6px 0px #dfdfdf,7px 7px 0px #dfdfdf,8px 8px 0px #dfdfdf,9px 9px 0px #dfdfdf,10px 10px 0px #dfdfdf;
+.title strong {
+  font-weight: 700;
 }
 
 .container {
@@ -95,16 +66,87 @@ li {
   margin: 50px auto;
 }
 
-input,
+#insertDiary .inputBox,
+#insertDiary .contents,
+#insertDiary .section:not(.btns) {
+  opacity: 0;
+  transition: opacity 0.25s ease-in-out;
+}
+#insertDiary.open .inputBox,
+#insertDiary.open .contents,
+#insertDiary.open .section:not(.btns) {
+  opacity: 1;
+}
+#insertDiary .section h2 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+#insertDiary .section .list {
+  display: flex;
+  justify-content: center;
+}
+#insertDiary .section .list label {
+  position: relative;
+  height: 80px;
+  width: 100px;
+}
+#insertDiary .section .list label input[type=radio] {
+  background: none;
+  height: 0;
+  width: 0;
+  display: none;
+  opacity: 0;
+}
+#insertDiary .section .list label span::before {
+  cursor: pointer;
+  display: block;
+  position: absolute;
+  content: "";
+  display: block;
+  width: 60px;
+  height: 60px;
+  background-color: transparent;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  background-size: contain;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+#insertDiary .section .list label:nth-child(1) span::before {
+  background-image: url("../../public/images/evil.png");
+}
+#insertDiary .section .list label:nth-child(2) span::before {
+  background-image: url("../../public/images/cry.png");
+}
+#insertDiary .section .list label:nth-child(3) span::before {
+  background-image: url("../../public/images/laughing.png");
+}
+#insertDiary .section .list label:nth-child(4) span::before {
+  background-image: url("../../public/images/happy.png");
+}
+#insertDiary .section .list label:nth-child(5) span::before {
+  background-image: url("../../public/images/love.png");
+}
+#insertDiary .inputBox {
+  margin-bottom: 10px;
+}
+#insertDiary .inputBox input {
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
 textarea,
 select {
   width: 100%;
   height: 50px;
+  padding: 0 20px;
   border-radius: 5px;
   background-color: #fff;
-  padding: 0 20px;
 }
-input:focus,
 textarea:focus,
 select:focus {
   outline-color: rgb(218, 15, 15);
@@ -112,19 +154,14 @@ select:focus {
 
 textarea {
   height: 200px;
-  resize: none;
   padding: 20px;
-}
-
-.section {
-  margin-bottom: 20px;
+  resize: none;
 }
 
 label {
+  display: block;
   margin-bottom: 10px;
   font-size: 18px;
-  color: #fff;
-  display: block;
 }
 
 .btns {
@@ -133,18 +170,18 @@ label {
   margin-top: 50px;
 }
 .btns .btn {
-  padding: 20px 50px;
-  color: #fff;
-  border-radius: 100px;
-  background-color: rgb(15, 103, 218);
-  border: none;
   display: flex;
   align-items: center;
-  font-size: 18px;
-  line-height: 1;
-  font-weight: 700;
   overflow: hidden;
-  text-shadow: 1px 1px 0px #0c50aa,2px 2px 0px #0c50aa,3px 3px 0px #0c50aa,4px 4px 0px #0c50aa,5px 5px 0px #0c50aa,6px 6px 0px #0c50aa,7px 7px 0px #0c50aa,8px 8px 0px #0c50aa,9px 9px 0px #0c50aa,10px 10px 0px #0c50aa,11px 11px 0px #0c50aa,12px 12px 0px #0c50aa,13px 13px 0px #0c50aa,14px 14px 0px #0c50aa,15px 15px 0px #0c50aa,16px 16px 0px #0c50aa,17px 17px 0px #0c50aa,18px 18px 0px #0c50aa,19px 19px 0px #0c50aa,20px 20px 0px #0c50aa,21px 21px 0px #0c50aa,22px 22px 0px #0c50aa,23px 23px 0px #0c50aa,24px 24px 0px #0c50aa,25px 25px 0px #0c50aa,26px 26px 0px #0c50aa,27px 27px 0px #0c50aa,28px 28px 0px #0c50aa,29px 29px 0px #0c50aa,30px 30px 0px #0c50aa,31px 31px 0px #0c50aa,32px 32px 0px #0c50aa,33px 33px 0px #0c50aa,34px 34px 0px #0c50aa,35px 35px 0px #0c50aa,36px 36px 0px #0c50aa,37px 37px 0px #0c50aa,38px 38px 0px #0c50aa,39px 39px 0px #0c50aa,40px 40px 0px #0c50aa;
+  padding: 20px 50px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 1;
+  border: none;
+  border-radius: 100px;
+  background-color: rgb(118, 173, 245);
+  text-shadow: 1px 1px 0px #4691f2,2px 2px 0px #4691f2,3px 3px 0px #4691f2,4px 4px 0px #4691f2,5px 5px 0px #4691f2,6px 6px 0px #4691f2,7px 7px 0px #4691f2,8px 8px 0px #4691f2,9px 9px 0px #4691f2,10px 10px 0px #4691f2,11px 11px 0px #4691f2,12px 12px 0px #4691f2,13px 13px 0px #4691f2,14px 14px 0px #4691f2,15px 15px 0px #4691f2,16px 16px 0px #4691f2,17px 17px 0px #4691f2,18px 18px 0px #4691f2,19px 19px 0px #4691f2,20px 20px 0px #4691f2,21px 21px 0px #4691f2,22px 22px 0px #4691f2,23px 23px 0px #4691f2,24px 24px 0px #4691f2,25px 25px 0px #4691f2,26px 26px 0px #4691f2,27px 27px 0px #4691f2,28px 28px 0px #4691f2,29px 29px 0px #4691f2,30px 30px 0px #4691f2,31px 31px 0px #4691f2,32px 32px 0px #4691f2,33px 33px 0px #4691f2,34px 34px 0px #4691f2,35px 35px 0px #4691f2,36px 36px 0px #4691f2,37px 37px 0px #4691f2,38px 38px 0px #4691f2,39px 39px 0px #4691f2,40px 40px 0px #4691f2;
 }
 
 .diaryItem textarea {
@@ -152,16 +189,16 @@ label {
 }
 
 .section {
-  text-align: left;
-  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .infoBox {
-  background-color: #f8f8f8;
-  border-radius: 10px;
+  width: 800px;
   margin: 20px auto;
   padding: 20px;
-  width: 800px;
+  background-color: #f8f8f8;
+  border-radius: 10px;
 }
 .infoBox dl {
   display: flex;
@@ -173,25 +210,24 @@ label {
 }
 
 .diaryList .titleBox {
-  color: #fff;
   margin: 50px 0;
   padding-top: 50px;
-  border-top: 1px dashed #fff;
+  border-top: 2px dashed rgba(0, 0, 0, 0.4);
 }
 .diaryList .titleBox h2 {
   font-size: 32px;
-  text-align: center;
-  text-transform: uppercase;
   font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
 }
 .diaryList .titleBox .total {
   text-align: right;
 }
 .diaryList .list li {
+  margin-bottom: 20px;
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
-  margin-bottom: 20px;
 }
 .diaryList .list li .info {
   display: flex;
@@ -207,14 +243,14 @@ label {
 }
 .diaryList .list li .btns {
   position: absolute;
-  right: 0;
   top: 0;
+  right: 0;
   margin-top: -5px;
 }
 .diaryList .list li .btns .btn {
-  border-radius: 5px;
-  padding: 5px;
   margin-left: 5px;
+  padding: 5px;
+  border-radius: 5px;
 }
 .diaryList .list li .btns .confirm {
   background-color: rgb(218, 15, 15);
@@ -222,9 +258,9 @@ label {
 }
 .diaryList .list li .contents {
   margin-top: 20px;
-  font-weight: 500;
-  font-size: 18px;
   padding-top: 20px;
+  font-size: 18px;
+  font-weight: 500;
   border-top: 1px dashed #d9d9d9;
   white-space: pre-wrap;
 }
@@ -232,15 +268,14 @@ label {
 #footer {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 #footer p {
   padding: 15px 30px;
-  background-color: #fff;
   font-weight: 300;
-  border-radius: 100px;
   text-transform: uppercase;
+  background-color: #fff;
+  border-radius: 100px;
 }
 #footer p strong {
   font-weight: 900;
